# Ferrous

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml  setup_env.sh
.github/workflows/: release.yml
android/: build.gradle  gradle.properties
android/app/: build.gradle
docs/: pdfium-setup.md
lib/: main.dart
lib/app/: app_shell.dart
lib/core/constants/: app_constants.dart
lib/core/errors/: exceptions.dart
lib/core/models/: book.dart  book_format.dart
lib/core/services/: update_service.dart
lib/core/utils/: dom_text_utils.dart  normalized_text_map.dart  perf_logger.dart  performance.dart  sentence_utils.dart  text_normalization.dart
lib/core/widgets/: update_dialog.dart
lib/data/models/: annotation.dart  annotation_adapter.dart  book.dart  book.g.dart  book_adapter.dart  book_format.dart  collection.dart  collection_adapter.dart  reader_theme_config.dart  reader_theme_config.g.dart  (+2 more)
lib/utils/: app_themes.dart  normalized_text_map.dart  performance.dart  text_normalization.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: cbz.rs  covers.rs  crop.rs  docx.rs  library.rs  mobi.rs  mod.rs  pdf.rs  tts_text.rs  txt.rs
rust/src/rendering/: mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_reader_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_reader_app.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: setup-pdfium-android.sh
(+92 files in other folders)
